2008-03-11  Akira TAGOH  <tagoh@redhat.com>

	* backends/gconf/main.c: Add a prototype declaration for
	imsettings_gconf_get_type() and imsettings_gconf_new() to shut up
	a compiler warning.

	* src/factory.c: Add a prototype declaration for
	imsettings_manager_get_type() to shut up a compiler warning.

	* src/factory_info.c: Add a prototype declaration for
	imsettings_info_manager_get_type() to shut up a compiler warning.

	* imsettings/Makefile.am ($(srcdir)/imsettings-marshal.c): Add #include
	"imsettings-marshal.h" to shut up a compiler warning.

2008-03-07  Akira TAGOH  <tagoh@redhat.com>

	* imsettings/imsettings-request.h: Fix a typo.

2008-03-06  Akira TAGOH  <tagoh@redhat.com>

	* backends/qt/Makefile.am (noinst_HEADERS): missed qt-imsettings.h to
	be distributed.

	* src/factory.c (_child_setup): new function to setup PGID for child
	process.
	(_stop_process): send a signal to PGID instread of PID.
	(imsettings_manager_real_stop_im): make a change in the settings before
	killing the processes.

2008-02-22  Akira TAGOH  <tagoh@redhat.com>

	* backends/qt/introspection.xml:
	* backends/qt/main.cpp:
	* backends/qt/qt-imsettings.(cpp|h):
	* backends/qt/qt-im-settings-daemon.service.in:
	* backends/qt/Makefile.am: Initial commit for IMSettings service for Qt.
	* backends/Makefile.am:
	* configure.ac: Add Qt support.

	* imsettings/imsettings.h: Add defines for Qt interface.

	* backends/gconf/Makefile.am (LIBS): get rid of the unnecessary library
	linkage.

	* backends/gconf/main.c: clean up.

	* src/Makefile.am (im_settings_daemon_CFLAGS): Use X11_CFLAGS instead of.
	(im_settings_daemon_LDADD): Use X11_LIBS instead of.

2008-02-20  Akira TAGOH  <tagoh@redhat.com>

	* imsettings/imsettings-info.c (imsettings_info_notify_properties):
	Prefer IMSETTINGS_IGNORE_ME rather than IM_CHOOSER_IGNORE_ME.

	* src/factory.c (imsettings_manager_real_start_im): do not update
	.xinputrc if requested.
	(imsettings_manager_real_stop_im): likewise.
