@@ -1,3 +1,7 @@
+2008-03-12  Akira TAGOH  <tagoh@redhat.com>
+
+	* backends/xfce/imsettings_plugin.c: Mcs plugin for imsettings support.
+
 2008-03-11  Akira TAGOH  <tagoh@redhat.com>
 
 	* backends/gconf/main.c: Add a prototype declaration for
